--- a/app/assets/styles/media.css
+++ b/app/assets/styles/media.css
@@ -14,7 +14,7 @@
       --content-padding: 1.6rem;
     }
 
-    body>main {
+    .main {
       padding: var(--main-padding);
     }
 
